Updating name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "imarc/craft-sass-plugin",
+    "name": "imarc/craft-sass",
     "description": "A Craft plugin that compiles SASS on the server as needed.",
-    "homepage": "https://github.com/imarc/craft-sass-plugin",
+    "homepage": "https://github.com/imarc/craft-sass",
     "version": "1.0.0",
     "type": "library",
     "license": "Apache",
